--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,6 +1,10 @@
-data_source: C:\Users\krishna\Desktop\Datasets\Breast_cancer_data.csv
+data_source: C:\Users\Vikas.Yetintala\Downloads\Breast_cancer_data.csv
 
 artifacts:
   artifacts_dir: artifacts_dir
   raw_local_dir: raw_local_dir
-  raw_local_file: raw_local_file
+  raw_local_file: data.csv
+  split_dir: split_dir
+  train_file: train.csv 
+  test_file: test.csv
+
